hphp/hack/test/typecheck/nonnull/constrained_enum.php.rust_elab.exp
File "constrained_enum.php", line 3, characters 6-6:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
